--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -164,7 +164,7 @@ Best wishes,
 
 			  <!-- CANCEL -->
 			  <p class="bold" style="margin-top:30px; margin-bottom:5px;">No longer able to attend this event? </p>
-			  <p>Please let us know if [you need to cancel] so that we can free up additional spaces for others.</p>
+			  <p>Please let us know so that we can free up additional spaces for others.</p>
 
 
 		  </div>
