--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -515,7 +515,7 @@
 
 
 							  <p id="agenda-7-add"
-								 {% if agendaShow7 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:20px; margin-bottom:0px;"
+								 {% if agendaShow7 != true  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:20px; margin-bottom:0px;"
 								 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:20px; margin-bottom:0px; display:none;" {% endif %}
 								 onclick="show7()">Add another activtiy</p>
 
