--- a/app/views/create-event/go-live.html
+++ b/app/views/create-event/go-live.html
@@ -44,10 +44,11 @@
 					<li><a href="#main-link-section">Default link: invalid</a></li>
 				{% endif %}
 
-				<!--  no used ad it is messily done in javascript -->
-				{% if errorTrackingUrlEmpty %}
+				<!--  no used ad it is messily done in javascript
+				{% if  %}
 					<li><a href="#tracking-links-section">Tracking link: tracking link label missing</a></li>
 				{% endif %}
+				-->
 
 				{% if errorTrackingUrlEmpty %}
 					<li><a href="#tracking-links-section">Tracking link url: missing</a></li>
