--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -92,7 +92,7 @@
           <hr style="background-color:#DDD">
 
             <div style="margin-bottom:35px; margin-top:40px;">
-                <h4 class="bold-small">Benefits of attending</h4>
+                <h4 class="bold-small">Event outcomes</h4>
 
                 {% if session.data['benefits-error'] == true %}
                     <p class="cya-answer">Not yet entered</p>
