--- a/app/views/create-event/template-reminder.html
+++ b/app/views/create-event/template-reminder.html
@@ -210,7 +210,7 @@ GOV.UK prototype kit
 
 						<tr>
 							<td>Webpage</td>
-							<td><a href="#">[EVENT PAGE LINK]</a></td>
+							<td>[EVENT PAGE LINK]</td>
 						</tr>
 
 						</tbody>
