--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -142,7 +142,7 @@
 
 				  <tr>
 					  <td>Webpage</td>
-					  <td><a href="#">[EVENT PAGE LINK]</a></td>
+					  <td>[EVENT PAGE LINK]</td>
 				  </tr>
 
 				  </tbody>
