--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -331,7 +331,9 @@
 
 		  <div class="form-group" style="margin-top:40px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/attendees">I'll complete this later - I don't have this information yet</a></p>
+
+			  <input type="submit" formaction="/create-event/tickets-skip" value="I'll complete this later - I don't have this information yet"
+					 style="margin-top:25px; border:0px; padding:0px; background-color: transparent; color: #005ea5; text-decoration: underline; cursor: pointer; ">
 		  </div>
 
 
