Updated validation for images and description no longer has validation

--- a/app/views/create-event/partner-logos.html
+++ b/app/views/create-event/partner-logos.html
@@ -76,7 +76,7 @@
 			  <div class="form-group"
 				   style="margin-top:10px; margin-bottom:20px">
 
-				  <p>Partner logos will be display on the footer of your webpage.</p>
+				  <p>Partner logos will be displayed on the footer of your webpage.<br>Images will appear in the order that you upload them.</p>
 
 
 				  <div id="partner-1" style="margin-bottom:30px;">
