--- a/app/views/create-event/go-live.html
+++ b/app/views/create-event/go-live.html
@@ -81,12 +81,12 @@
 			</label>
 			<div class="form-date" style="margin-top:5px">
 				<div class="multiple-choice" style="margin-bottom:10px">
-					<input id="radio-access-level-public" type="radio" name="radio-link-access" value="public">
+					<input id="radio-access-level-public" type="radio" name="radio-link-access" value="Anyone on the web">
 					<label for="radio-access-level-public">
 						Anyone on the web</label>
 				</div>
 				<div class="multiple-choice" style="margin-bottom:10px">
-					<input id="radio-access-level-link-only" type="radio" name="radio-link-access" value="linkonly">
+					<input id="radio-access-level-link-only" type="radio" name="radio-link-access" value="Only people we share the link with">
 					<label for="radio-access-level-link-only">Only people we share the link with</label>
 				</div>
 			</div>
