--- a/app/views/create-event/venue-map-redirect.html
+++ b/app/views/create-event/venue-map-redirect.html
@@ -36,7 +36,7 @@
 	{
 		document.getElementById('smash').style.background = 'green';
 
-		window.open("https://www.google.co.uk/maps/place/ExCeL+London/@51.5087539,0.0285156,15z/data=!4m5!3m4!1s0x0:0xa0de5f705d7aec7!8m2!3d51.5084601!4d0.029846", '_blank');
+		window.open("https://www.google.co.uk/maps/place/Royal+Devon+and+Exeter+Hospital/@50.7162594,-3.5088454,17z/data=!3m1!4b1!4m5!3m4!1s0x486da40437265199:0xb269d663e3730e3b!8m2!3d50.7162594!4d-3.5066567", '_blank');
 
 		window.location.replace("/create-event/venue");
 	});
